Specify font-family: Times for Checkbox and RadioButton font icons. Avoids alignment issues if the page is using a custom font.
It would be better though if deliteful had its own checkmark and circle
font icons, because that would get a uniform look across browsers.

Refs #408, #601.

--- a/Checkbox/themes/Checkbox_template.less
+++ b/Checkbox/themes/Checkbox_template.less
@@ -9,6 +9,7 @@
 		display: inline-block;
 		text-align: center;
 		content: "\00A0";			// non-breaking space
+		font-family: Times;			// just in case app is using a custom font
 		.d-checkbox-before-styles();
 	}
 	&.d-rtl::before {
