--- a/Checkbox/themes/holodark/Checkbox.css
+++ b/Checkbox/themes/holodark/Checkbox.css
@@ -12,6 +12,7 @@
   display: inline-block;
   text-align: center;
   content: "\00A0";
+  font-family: Times;
   border-color: #5c5c5c;
   border-style: solid;
   border-width: 1px;
