--- a/Checkbox/themes/ios/Checkbox.css
+++ b/Checkbox/themes/ios/Checkbox.css
@@ -15,6 +15,7 @@
   display: inline-block;
   text-align: center;
   content: "\00A0";
+  font-family: Times;
   border-color: #b0b0b0;
   border-style: solid;
   border-width: 1px;
