--- a/RadioButton/themes/bootstrap/RadioButton.css
+++ b/RadioButton/themes/bootstrap/RadioButton.css
@@ -12,6 +12,7 @@
   display: inline-block;
   text-align: center;
   content: "\00A0";
+  font-family: Times;
   border-color: #cccccc;
   border-style: solid;
   border-width: 1px;
